--- a/html-css/styles.css
+++ b/html-css/styles.css
@@ -1,166 +1,198 @@
-        /**GENERAL**/
-        body {
-            margin: 0;
-        }
-        p {
-            font-family: 'Robot', Arial;
-            margin-top: 0;
-            margin-bottom: 0;
-        }
+/**GENERAL**/
+body {
+    margin: 0;
+    padding-top: 70px;
+}
+p {
+    font-family: 'Robot', Arial;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
-        .video-grid {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            column-gap: 20px;
-            row-gap: 20px;
-        }
-        .thumbnail {
-            width: 100%;
-        }
+.video-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;
+    padding-left: 90px;
+}
+.thumbnail {
+    width: 100%;
+}
 
 
-        /**VIDEO**/
-        .video-info-grid {
-            display: grid;
-            grid-template-columns: 50px 1fr;
-        }
+/**VIDEO**/
+.video-info-grid {
+    display: grid;
+    grid-template-columns: 50px 1fr;
+}
 
-        .profile-pic {
-            width: 40px;
-            border-radius: 25px;
-        }
+.profile-pic {
+    width: 40px;
+    border-radius: 25px;
+}
 
-        .video-title {
-            margin-top: 0;
-            font-size: 14px;
-            line-height: 20px;
-            font-weight: 500;
-            margin-bottom: 10px;
-        }
+.video-title {
+    margin-top: 0;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
 
-        .video-author,
-        .video-stats {
-            font-size: 12px;
-            color: #606060;
-        }
+.video-author,
+.video-stats {
+    font-size: 12px;
+    color: #606060;
+}
 
-        .video-author {
-            margin-bottom: 6px;
-        }
+.video-author {
+    margin-bottom: 6px;
+}
 
-        .thumbnail-row {
-            margin-bottom: 12px;
-        }
+.thumbnail-row {
+    margin-bottom: 12px;
+}
 
-        /**HEADER**/
-        header {
-            height: 54px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-        }
+/**HEADER**/
+header {
+    height: 54px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: white;
+    border-bottom: 1px solid rgb(209, 206, 206);
 
-        .left-section {
-            display: flex;
-            align-items: center;
-            margin-left: 20px;
-        }
+}
 
-        .hamburger-menu {
-            height: 28px;
-            margin-right: 10px;
-        }
+.left-section {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+}
 
-        .youtube-logo {
-            height: 22px;
-        }
+.hamburger-menu {
+    height: 28px;
+    margin-right: 10px;
+}
 
-        .middle-section {
-            display: flex;
-            flex: 1;
-            margin-right: 15px;
-            margin-left: 20px;
-            max-width: 400px;
-            align-items: center;
-        }
+.youtube-logo {
+    height: 22px;
+}
 
-        .search-bar {
-            height: 26px;
-            flex: 1;
-            border: none;
-            border-radius: 2px;
-            padding-left: 10px;
-            border: 1px solid grey;
-            border-radius: 2px;
-            font-size: 16px;
-            box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.05);
-            width: 0;
-        }
-        
-        .search-bar::placeholder {
-            font-family: 'Courier New', Courier, monospace;
-        }
+.middle-section {
+    display: flex;
+    flex: 1;
+    margin-right: 15px;
+    margin-left: 20px;
+    max-width: 400px;
+    align-items: center;
+}
 
-        .search-bar:focus {
-            outline: none !important;
-            border: 1px solid blue;
-        }
+.search-bar {
+    height: 26px;
+    flex: 1;
+    border: none;
+    border-radius: 2px;
+    padding-left: 10px;
+    border: 1px solid grey;
+    border-radius: 2px;
+    font-size: 16px;
+    box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.05);
+    width: 0;
+}
 
-        .search-btn {
-            height: 30px;
-            width: 40px;
-            background-color: #929292;
-            border: none;
-            margin-right: 10px;
-            border: 1px solid gray;
-            margin-left: -1px;
-        }
+.search-bar::placeholder {
+    font-family: 'Courier New', Courier, monospace;
+}
 
-        .search-icon {
-            height: 20px; 
-            margin-top: 2px;
-        }
+.search-bar:focus {
+    outline: none !important;
+    border: 1px solid blue;
+}
 
-        .voice-search-btn {
-            height: 30px;
-            width: 30px;
-            background-color: #929292;
-            border-style: none;
-            border-radius: 15px;
-        }
+.search-btn {
+    height: 30px;
+    width: 40px;
+    background-color: #929292;
+    border: none;
+    margin-right: 10px;
+    border: 1px solid gray;
+    margin-left: -1px;
+}
 
-        .voice-search-icon {
-            margin-top: 2px;
-            height: 16px;
-        }
+.search-icon {
+    height: 20px; 
+    margin-top: 2px;
+}
 
-        .right-section {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 180px;
-            margin-right: 10px;
-            flex-shrink: 0;
-        }
+.voice-search-btn {
+    height: 30px;
+    width: 30px;
+    background-color: #929292;
+    border-style: none;
+    border-radius: 15px;
+}
 
-        .right-section:hover {
-            cursor: pointer;
-        }
+.voice-search-icon {
+    margin-top: 2px;
+    height: 16px;
+}
 
-        .upload-icon {
-            height: 24px;
-        }
+.right-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 180px;
+    margin-right: 10px;
+    flex-shrink: 0;
+}
 
-        .youtube-apps-icon {
-            height: 24px;
-        }
+.right-section:hover {
+    cursor: pointer;
+}
 
-        .notification-icon {
-            height: 24px;
-        }
+.upload-icon {
+    height: 24px;
+}
 
-        .current-user-icon {
-            height: 30px;
-            border-radius: 15px;
-        }
+.youtube-apps-icon {
+    height: 24px;
+}
+
+.notification-icon {
+    height: 24px;
+}
+
+.current-user-icon {
+    height: 30px;
+    border-radius: 15px;
+}
+
+/**sidebar**/
+.sidebar {
+    position: fixed;
+    top: 54px;
+    left: 0;
+    bottom: 0;
+    background-color: white;
+    width: 60px;
+    border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.sidebar-link {
+    background-color: blue;
+    height: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 
